--- a/CSS/stilopedro.css
+++ b/CSS/stilopedro.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   background-color: #f4f4f4;
   color: #333;
   margin: 0;
